Fixed logo proportions on mobile

--- a/Site/Sass/header.sass
+++ b/Site/Sass/header.sass
@@ -20,10 +20,12 @@
   @include mixins.centered-flex()
   
   &__logo
-    width: 2.5rem
+    height: 36px
+    width: 36px
 
     @include mixins.mq('desktop')
-      width: 4rem
+      height: 72px
+      width: 72px
   
   &__name
     font-family: 'Domine', serif
